examples/test/testpolicy3071.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3071
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key29: value24
      key0: value48
      key19: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value32
      podSelector:
        matchLabels:
          key1: value48
